test/fail/fail03.lsp
(r 'A 'B '(=))
(r 'B 'C '(>))
(r 'A 'C '(fi < mi))
(r_exist 'C '(B A) '(=));  - hier wird der Existenzquantor eingesetzt

;ist ein bisschen geraten...

; '(=) '(>) '(fi < mi) fails
